# MaldevTechniques

./: .gitignore  README.md
AMSI-Bypass/Adam Chester Patch/: Adam Chester Patch.sln  README.md
AMSI-Bypass/Amsi Bypass Hardware Breakpoints/: Amsi Bypass Hardware Breakpoints.sln  README.md
APIHashing/: APIHashing.sln
APIHashing/APIHashing/: APIHashing.vcxproj  main.cpp
AntiDebugging/: AntiDebugging.sln
AntiDebugging/AntiDebugging/: AntiDebugging.vcxproj  main.cpp
BSOD/: BSOD.sln
BSOD/BSOD/: BSOD.vcxproj  main.cpp
CodeInjection/: CodeInjection.sln
CodeInjection/CodeInjection/: CodeInjection.vcxproj  main.cpp
DGA+FAST-FLUX/: README.md  main.py
Heaven's Gate/: README.md  heavens_gate.asm
Obfuscation/: README.md  obfuscation.ps1
Persistence/: Persistence.sln
Persistence/Persistence/: Persistence.vcxproj  main.cpp
SRIS/: Cargo.toml  README.md
SRIS/src/: main.rs
SRIS/src/browser/: config.rs  crypto.rs  database.rs  extensions.rs  mod.rs  types.rs  utils.rs
SRIS/src/discord/: config.rs  mod.rs  types.rs
SRIS/src/ip/: mod.rs
SRIS/src/screenshot/: mod.rs
SRIS/src/steam/: mod.rs
SRIS/test-server/: test-server.py
SelfDelete/: SelfDelete.sln
SelfDelete/SelfDelete/: SelfDelete.vcxproj  main.cpp
SimpleC2/: .gitignore  README.md  c2.db  c2.py  db.py  models.py
SimpleC2/executors/: linux_executor.sh
SimpleC2/listener/: main.py  routes.py
SimpleC2/payload_builds/: README.md
SimpleC2/payloads/: README.md
SimpleC2/server/: agents_manager.py  executors_manager.py  main.py  (+1 more)
TimeStomping/: TimeStomping.sln
VMEvasion/: VMEvasion.sln
(+23 files in other folders)
