[package]
name = "SRIS"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
regex = "1.11"
reqwest =  { version = "0.12.26", features = ["json"] }
screenshots = "0.8.10"
serde = "1.0.228"
serde_json = "1.0.145"
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
] }